# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  demo.cast  demo1.cast  demo3.cast  demo4.cast  demo5.cast  diff_example1.cast  file2.json  file2.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
gendiff/: __init__.py  build_diff.py  cli.py  core.py  parser.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: expected_diff.txt  expected_diff_json.txt  expected_file1_vs_file1.txt  expected_file1_vs_file4.txt  expected_file3_vs_file4.txt  file4.json
